[UPD] #58027 Feedback emojis

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Feedback/_FeedbackQuestionOptions.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Feedback/_FeedbackQuestionOptions.cshtml
@@ -94,7 +94,7 @@
                                         if (!string.IsNullOrEmpty(Model.Options[i].IconId))
                                         {
                                             @Html.HiddenFor(m => m.Options[i].IconId)
-                                            if (!string.IsNullOrEmpty(Model.Options[i].IconSrc))
+                                            if (Model.Options[i].IconId == FeedBack.IconId)
                                             {
                                                 <img class="loaded-image" src=""/>
                                                 @Html.HiddenFor(m => m.Options[i].IconSrc, new { @class = "iconSrc" })
