[FIX] #57204 Section header dialog translations

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Admin/Views/CustomerCaseFieldSettings/_HeaderDialog.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Admin/Views/CustomerCaseFieldSettings/_HeaderDialog.cshtml
@@ -14,23 +14,23 @@
                     <table class="tableform">
                         <tr>
                             <td>
-                                <span>@Translation.GetCoreTextTranslation("Vid nytt case")</span>
+                                <span>@Translation.GetCoreTextTranslation("Vid nytt ärende")</span>
                             </td>
                             <td>
                                 <select id="isNewCollapsed">
                                     <option value="0" selected="selected">@Translation.GetCoreTextTranslation("Öppen")</option>
-                                    <option value="1">@Translation.GetCoreTextTranslation("Stängt")</option>
+                                    <option value="1">@Translation.GetCoreTextTranslation("Stängd")</option>
                                 </select>
                             </td>
                         </tr>
                         <tr>
                             <td>
-                                <span>@Translation.GetCoreTextTranslation("Vi ändring av case")</span>
+                                <span>@Translation.GetCoreTextTranslation("Vi ändring av ärende")</span>
                             </td>
                             <td>
                                 <select id="isEditCollapsed">
                                     <option value="0" selected="selected">@Translation.GetCoreTextTranslation("Öppen")</option>
-                                    <option value="1">@Translation.GetCoreTextTranslation("Stängt")</option>
+                                    <option value="1">@Translation.GetCoreTextTranslation("Stängd")</option>
                                 </select>
                             </td>
                         </tr>
